--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,12 +43,11 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.1",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^8.4.2",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.4.17"
   }
 }
